force-app/main/default/objects/Sale__c/Sale__c.object-meta.xml
<CustomObject>
    <description>Oggetto per gestione Vendite</description>
    <label>Vendita</label>
    <nameField>
        <label>Vendita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendite</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>