force-app/main/default/objects/Sale__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Details con l&apos;oggetto account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendite</relationshipLabel>
    <relationshipName>Vendite</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>