force-app/main/default/objects/Sale__c/fields/AccountVAT__c.field-meta.xml
<CustomField>
    <fullName>AccountVAT__c</fullName>
    <formula>Account__r.VATNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partita IVA</label>
    <type>Text</type>
</CustomField>