force-app/main/default/objects/Sale__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Vendite</relationshipLabel>
    <relationshipName>Vendite</relationshipName>
    <type>Lookup</type>
</CustomField>