force-app/main/default/objects/Sale__c/fields/CampaignCode__c.field-meta.xml
<CustomField>
    <fullName>CampaignCode__c</fullName>
    <label>Codice Campagna</label>
    <length>20</length>
    <type>Text</type>
</CustomField>