force-app/main/default/objects/Sale__c/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <label>CampaignMemberId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>