force-app/main/default/objects/Sale__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesChannel</valueSetName>
    </valueSet>
</CustomField>