force-app/main/default/objects/Sale__c/fields/CommissioningCampaign__c.field-meta.xml
<CustomField>
    <fullName>CommissioningCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagna Commissioning</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Vendite (Campagna Commissioning)</relationshipLabel>
    <relationshipName>ComissioningSales</relationshipName>
    <type>Lookup</type>
</CustomField>