force-app/main/default/objects/Sale__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>Creato da</label>
    <length>50</length>
    <type>Text</type>
</CustomField>