force-app/main/default/objects/Sale__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <label>Data Emissione Documento</label>
    <type>Date</type>
</CustomField>