force-app/main/default/objects/Sale__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>Numero Documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>