force-app/main/default/objects/Sale__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Tipologia Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARTA DI IDENTITÀ</fullName>
            </value>
            <value>
                <fullName>PATENTE</fullName>
            </value>
            <value>
                <fullName>PASSAPORTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>