force-app/main/default/objects/Sale__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interazione</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Vendite</relationshipLabel>
    <relationshipName>Vendite</relationshipName>
    <type>Lookup</type>
</CustomField>