force-app/main/default/objects/Sale__c/fields/IsMonitoring__c.field-meta.xml
<CustomField>
    <fullName>IsMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoraggio Attivo</label>
    <type>Checkbox</type>
</CustomField>