force-app/main/default/objects/Sale__c/fields/SaleBy__c.field-meta.xml
<CustomField>
    <fullName>SaleBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup all&apos;utente che ha eseguito la vendità</description>
    <label>User Vendita</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendite</relationshipName>
    <type>Lookup</type>
</CustomField>