force-app/main/default/objects/Sale__c/fields/SalesCompany__c.field-meta.xml
<CustomField>
    <fullName>SalesCompany__c</fullName>
    <description>Società di vendita</description>
    <label>Società di vendita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesCompany</valueSetName>
    </valueSet>
</CustomField>