force-app/main/default/objects/Sale__c/fields/SalesContact__c.field-meta.xml
<CustomField>
    <fullName>SalesContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contatto Vendita</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendite</relationshipLabel>
    <relationshipName>Vendite</relationshipName>
    <type>Lookup</type>
</CustomField>