force-app/main/default/objects/Sale__c/fields/SalesContactRole__c.field-meta.xml
<CustomField>
    <fullName>SalesContactRole__c</fullName>
    <description>Identifica il ruolo del contatto con cui si sta facendo la vendita</description>
    <label>Interlocutore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>