force-app/main/default/objects/Sale__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Attiva</fullName>
            </value>
            <value>
                <fullName>Annullata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>