force-app/main/default/objects/Sale__c/fields/VendorFirstName__c.field-meta.xml
<CustomField>
    <fullName>VendorFirstName__c</fullName>
    <label>Nome Venditore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>